--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "joi": "^17.10.2",
     "mysql2": "^3.6.1"
   },
   "devDependencies": {
